test-cases/negative/test_124_function_call_without_args_when_required.lay
# negative test: function requiring arguments called without them
# expected: type checker should catch this

define function add that takes x and y and returns Number
  return x plus y

the variable result of type Number is call add


